--- a/sass/_application-form.scss
+++ b/sass/_application-form.scss
@@ -257,7 +257,7 @@ p.super-short.super-short {
 table.student-info {
 	width: 668px;
 	border: 4px groove darken($dark-gray, 5%);
-	margin-bottom: 16px;
+	margin-bottom: 8px;
 
 	td {
 		border: 1px solid $dark-gray;
