--- a/sass/_print.scss
+++ b/sass/_print.scss
@@ -409,7 +409,7 @@
 		.application-page {
 			
 			width: 8in;
-			height: 10.5in;
+			height: 11in;
 
 			&.span-2-pages {
 				height: calc(10.5in * 2);
